[gd_scene load_steps=6 format=3 uid="uid://bjx6cdxews71y"]

[ext_resource type="Texture2D" uid="uid://c42j4gewwbg6v" path="res://art/texture/character/knight.tres" id="1_m2fm6"]
[ext_resource type="Script" uid="uid://ctc2dadxl1qkq" path="res://ui/hero_card/hero_card.gd" id="1_squi4"]
[ext_resource type="Texture2D" uid="uid://dg8e4liul7dve" path="res://art/texture/property/attack.tres" id="2_edv52"]
[ext_resource type="Texture2D" uid="uid://dgsly6d14l2h" path="res://art/texture/property/hp.tres" id="3_qm1i8"]
[ext_resource type="PackedScene" uid="uid://dinx3muvs1cbb" path="res://ui/skill_display/skill_display.tscn" id="5_bd5pa"]

[node name="HeroCard" type="Control"]
custom_minimum_size = Vector2(64, 106)
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 96.0
script = ExtResource("1_squi4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.27451)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_constants/separation = 4
alignment = 1

[node name="HeroPhoto" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("1_m2fm6")
expand_mode = 4
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6
alignment = 2

[node name="HeroName" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Bob"
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_constants/separation = 0

[node name="AttackIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("2_edv52")
expand_mode = 2

[node name="AttackLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(14, 0)
layout_mode = 2
text = "2"
horizontal_alignment = 2

[node name="HPIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("3_qm1i8")
expand_mode = 2

[node name="HPLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(14, 0)
layout_mode = 2
text = "5"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SkillContainer" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="SkillDisplay" parent="VBoxContainer/SkillContainer" instance=ExtResource("5_bd5pa")]
layout_mode = 2
clip_text = true
text_overrun_behavior = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="JoinButton" type="Button" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
text = "加入"

[connection signal="pressed" from="VBoxContainer/HBoxContainer3/JoinButton" to="." method="_on_join_button_pressed"]
